--- a/14. Zero_divisor.md
+++ b/14. Zero_divisor.md
@@ -44,7 +44,7 @@ In the ring $\mathbb{Z}_6 = \{0, 1, 2, 3, 4, 5\}$ under addition and multiplicat
 
 ## Characterization
 
-$$\{\text{zero divisors in } \mathbb{Z}_n\} = \{\bar{k} \in \mathbb{Z}_n \mid \bar{k}\bar{x} = \bar{0} \text{ has a non-zero solution}\}$$
+$$\{\text{zero divisors in } \mathbb{Z}_n\} = \{\bar{0}\neq \bar{k} \in \mathbb{Z}_n \mid \bar{k}\bar{x} = \bar{0} \text{ has a non-zero solution}\}$$
 
 $\bar{k}$ is a zero divisor in $\mathbb{Z}_n$ if and only if $\gcd(k,n) > 1$.
 
@@ -95,8 +95,8 @@ This shows that matrix rings generally contain zero divisors and hence are not i
 
 # Zero divisor of $M_n(\mathbb{R})$
 
-$\{\text{left zero\ divisor\ in\ }M_n(\mathbb{R})\} = \{A \in M_n(\mathbb{R}) \mid \exists\ B\neq 0\ \text{s.t.}\ AB=0\}$
-  $= \{A \in M_n(\mathbb{R}) \mid A\ \text{is singular}\}$
+$\{\text{left zero\ divisor\ in\ }M_n(\mathbb{R})\} = \{0\neq A \in M_n(\mathbb{R}) \mid \exists\ B\neq 0\ \text{s.t.}\ AB=0\}$
+  $= \{A \in M_n(\mathbb{R}) \mid A\ \text{is singular and non-zero}\}$
 
 <details>
 <summary> Solution </summary>
