--- a/17. More Polynomials.md
+++ b/17. More Polynomials.md
@@ -1,6 +1,6 @@
 ---
 marp: true
-theme: default
+theme: default 
 paginate: true
 size: 16:9
 fontsize: 16px
@@ -90,6 +90,9 @@ Runge's phenomenon demonstrates the dangers of high-degree polynomial interpolat
 
 **Consequence:** High-degree polynomial interpolation is often unstable.
 
+
+
+<!-- 
 ---
 # Linear algebra and $F[x]$-module
 
@@ -148,8 +151,7 @@ $$m_A(x) = \prod_{i=1}^k (x - \lambda_i)^{d_i}$$
 where $d_i$ is the size of the largest Jordan block corresponding to eigenvalue $\lambda_i$.
 
 ---
-
-# Primary decomposition theorem
+# Primary decomposition theorem 
 
 ## Theorem (Primary Decomposition for F[x]-modules)
 
@@ -169,7 +171,7 @@ $$m_T(x) = p_1(x)^{e_1} p_2(x)^{e_2} \cdots p_k(x)^{e_k}$$
 where $p_i(x)$ are distinct irreducible polynomials, then:
 $$V = \ker(p_1(T)^{e_1}) \oplus \ker(p_2(T)^{e_2}) \oplus \cdots \oplus \ker(p_k(T)^{e_k})$$
 
-This decomposition is unique.
+This decomposition is unique. -->
 
 ---
 
@@ -254,7 +256,7 @@ $$
 \pi_p(a_n x^n + a_{n-1} x^{n-1} + \cdots + a_1 x + a_0) = \overline{a_n} x^n + \overline{a_{n-1}} x^{n-1} + \cdots + \overline{a_1} x + \overline{a_0}
 $$
 
-where $\overline{a_i} \in \mathbb{F}_p$ denotes the residue class of $a_i$ modulo $p$.
+where $\overline{a_i} \in \mathbb{Z}_p$ denotes the residue class of $a_i$ modulo $p$.
 
 ---
 **Key properties:**
